# swQolSuite

./: Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autobuild.yml
src/: build.rs  lib.rs  main.rs
src/tweaks/: dev_mode.rs  editor_camera_speed.rs  editor_placement.rs  editor_show_hidden.rs  fast_loading_animations.rs  fullscreen.rs  loading.rs  map_lag.rs  mod.rs  multithreaded_loading.rs  no_minimize_on_lost_focus.rs  transform_edit.rs
src/tweaks/settings/: mod.rs  slider.rs  toggle.rs
src/types/: mod.rs
