[package]
name = "swqols"
version = "0.1.0"
repository = "https://github.com/PieKing1215/swQolSuite"
authors = ["PieKing1215"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
build = "src/build.rs"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "swqols-inject"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[dependencies]
hudhook = { version = "0.7.1", default-features = false, features = ["opengl3", "inject"] }
anyhow = "1.0.86"
memory-rs = "0.2.6"
atomic_float = "1.0.0"
# need latest commit, which is not released ("Fix detour not disabling on drop in release mode")
retour = { git = "https://github.com/Hpmason/retour-rs", rev = "3bab630e234528e848c6c4e0a81656d262224579", features = ["static-detour"] }
num-traits = "0.2"
itertools = "0.13"